--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -7,6 +7,12 @@
 
 $royal-purple: rgb(100, 40, 104);
 $yfu-text: rgb(85, 85, 85);
+$yfu-ep: rgb(0, 180, 185);
+$yfu-ap: rgb(245, 145, 0);
+$yfu-volunteer: rgb(230, 0, 75);
+$yfu-educators: rgb(10, 175, 230);
+$yfu-alumni: rgb(195, 215, 75);
+$yfu-donors: rgb(0, 90, 130);
 
 $topbar-primary-color: $royal-purple;
 $topbar-secondary-color: $royal-purple;
