--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -270,20 +270,16 @@ a.button.header-button {
           border: 2px solid $royal-purple;
       }
       .meal {
-          background-color: gray;
-          border: 2px solid gray;
+          background-color: $yfu-ep;
+          border: 2px solid $yfu-ep;
       }
       .social, .tournament {
-          background-color: $royal-purple;
-          border: 2px solid $royal-purple;
-      }
-      .party {
-          background-color: $royal-purple;
-          border: 2px solid $royal-purple;
+          background-color: $yfu-volunteer;
+          border: 2px solid $yfu-volunteer;
       }
       .plenum {
-          background-color: $royal-purple;
-          border: 2px solid $royal-purple;
+          background-color: $yfu-ap;
+          border: 2px solid $yfu-ap;
       }
       .other {
           background-color: gray;
