--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -274,8 +274,8 @@ a.button.header-button {
           border: 2px solid $yfu-ep;
       }
       .social, .tournament {
-          background-color: $yfu-volunteer;
-          border: 2px solid $yfu-volunteer;
+          background-color: $yfu-ap;
+          border: 2px solid $yfu-ap;
       }
       .plenum {
           background-color: $yfu-ap;
