--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -274,8 +274,8 @@ a.button.header-button {
           border: 2px solid $yfu-ep;
       }
       .social, .tournament {
-          background-color: $yfu-ap;
-          border: 2px solid $yfu-ap;
+          background-color: $yfu-volunteer;
+          border: 2px solid $yfu-volunteer;
       }
       .plenum {
           background-color: $yfu-ap;
@@ -367,7 +367,10 @@ dl.sub-nav dd a { text-decoration: none; }
   ul {
     @include block-grid(1);
     @media #{$medium-up} {
-      @include block-grid(4);
+      @include block-grid(3);
+    }
+    .th {
+        max-width: 200px;
     }
   }
   blockquote {
