Try fixing background issues for IE
Aparrently some IE versions don't know <main> yet.

--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -14,7 +14,7 @@ header {
   padding-bottom: 0;
 }
 
-main {
+main.main {
   padding-top: rem-calc(30);
   padding-bottom: rem-calc(100);
   background: #fff;
