Try fixing IE again

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -53,7 +53,7 @@ $rem-base: $base-font-size;
 // $total-columns: 12;
 
 // We use these to control various global styles
-$body-bg: $royal-purple;
+$body-bg: #fff;
 $body-font-color: $yfu-text;
 
 $body-font-family: 'YFU', sans-serif;
