--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -10,332 +10,333 @@
 @import "foundation/components/side-nav";
 
 header {
-  border-bottom: 1px solid $topbar-primary-color;
-  padding-bottom: 0;
+    border-bottom: 1px solid $topbar-primary-color;
+    padding-bottom: 0;
 }
 
 main.main {
-  padding-top: rem-calc(30);
-  padding-bottom: rem-calc(100);
-  background: #fff;
+    padding-top: rem-calc(30);
+    padding-bottom: rem-calc(100);
+    background: #fff;
 }
 
 .button {
-  box-shadow: 0 -2px 0 rgba(255, 255, 255, 0.3) inset;
-  -moz-box-shadow: 0 -2px 0 rgba(255, 255, 255, 0.3) inset;
+    box-shadow: 0 -2px 0 rgba(255, 255, 255, 0.3) inset;
+    -moz-box-shadow: 0 -2px 0 rgba(255, 255, 255, 0.3) inset;
 }
 
 .bottom {
-  padding: rem-calc(20) 0;
-  footer {
-    @include grid-row();
-    h2 { font-size: $base-font-size; color: #fff; }
-    p, h2 {
-      color: #fff;
-      font-size: 0.9rem;
-      margin: 0;
-      padding: 0;
-      a, a:hover { color: #fff; text-decoration: underline }
+    background: $royal-purple;
+    padding: rem-calc(20) 0;
+    footer {
+        @include grid-row();
+        h2 { font-size: $base-font-size; color: #fff; }
+        p, h2 {
+            color: #fff;
+            font-size: 0.9rem;
+            margin: 0;
+            padding: 0;
+            a, a:hover { color: #fff; text-decoration: underline }
+        }
+        p  { padding-bottom: rem-calc(8); }
+        /*h2 { padding: rem-calc(8) 0 0 0; }*/
+        & > div {
+            padding: rem-calc(20) 0;
+            @include grid-column(12);
+            @media #{$medium-up} {
+                @include grid-column(4);
+            }
+        }
     }
-    p  { padding-bottom: rem-calc(8); }
-    /*h2 { padding: rem-calc(8) 0 0 0; }*/
-    & > div {
-      padding: rem-calc(20) 0;
-      @include grid-column(12);
-      @media #{$medium-up} {
-        @include grid-column(4);
-      }
-    }
-  }
 }
 
 section.content, section.flash {
-  @include grid-row($behavior: false);
+    @include grid-row($behavior: false);
 
-  & > article, & > hgroup, & > aside.sidebar {
-    @include grid-column(12);
-  }
+    & > article, & > hgroup, & > aside.sidebar {
+        @include grid-column(12);
+    }
 
-  .two-thirds {
-    @media #{$medium-up} {
-      @include grid-column(8);
+    .two-thirds {
+        @media #{$medium-up} {
+        @include grid-column(8);
     }
-  }
+    }
 
-  .half {
-    @media #{$medium-up} {
-      @include grid-column(6);
+    .half {
+        @media #{$medium-up} {
+        @include grid-column(6);
     }
-  }
+    }
 
-  .narrow {
-    @media #{$medium-up} {
-      @include grid-column(4);
+    .narrow {
+        @media #{$medium-up} {
+        @include grid-column(4);
     }
-  }
+    }
 
-  aside.fixed-sidebar {
-    @media #{$medium-up} {
-      @include grid-column(3);
-      position: fixed;
-      top: 50px;
-      bottom: 0;
-      left: 0;
-      z-index: 10;
-      display: block;
-      padding: 10px;
-      overflow-x: hidden;
-      overflow-y: auto;
+    aside.fixed-sidebar {
+        @media #{$medium-up} {
+        @include grid-column(3);
+        position: fixed;
+        top: 50px;
+        bottom: 0;
+        left: 0;
+        z-index: 10;
+        display: block;
+        padding: 10px;
+        overflow-x: hidden;
+        overflow-y: auto;
     }
-  }
+    }
 
-  aside.sidebar {
-    @media #{$medium-up} {
-      margin-top: rem-calc(25);
-      @include grid-column(3);
+    aside.sidebar {
+        @media #{$medium-up} {
+        margin-top: rem-calc(25);
+        @include grid-column(3);
     }
-  }
+    }
 
-  aside.sidebar nav ul, ul.sidenav {
-    a { text-decoration: none; }
-    @include side-nav();
-    li   { margin: 0; }
-    li i.fa.right { padding: rem-calc(4) 0 0 0; }
-    li a, li.text, li.subheading {
-      padding: rem-calc(2) rem-calc(5) !important;
-      margin: rem-calc(1) 0 !important;
-      @include radius();
+    aside.sidebar nav ul, ul.sidenav {
+        a { text-decoration: none; }
+        @include side-nav();
+        li   { margin: 0; }
+        li i.fa.right { padding: rem-calc(4) 0 0 0; }
+        li a, li.text, li.subheading {
+            padding: rem-calc(2) rem-calc(5) !important;
+            margin: rem-calc(1) 0 !important;
+            @include radius();
+        }
+        li.subheading {
+            font-style: italic !important;
+            padding-top: rem-calc(13) !important;
+            padding-bottom: rem-calc(0) !important;
+        }
+        li.heading + li.subheading { padding-top: rem-calc(3) !important; }
+        li.active a {
+            background-color: $royal-purple !important;
+            color: #fff;
+        }
+        li:hover a {
+            background-color: lighten($royal-purple, 10) !important;
+            color: #fff !important;
+        }
+        li.heading {
+            margin: rem-calc(30) 0 0 0;
+            padding: 0 rem-calc(4);
+            color: $small-font-color;
+            font-weight: bold;
+            text-transform: uppercase;
+        }
+        & > li.heading:first-child {
+            margin-top: 0;
+        }
     }
-    li.subheading {
-      font-style: italic !important;
-      padding-top: rem-calc(13) !important;
-      padding-bottom: rem-calc(0) !important;
+    aside.sidebar + article {
+        @media #{$medium-up} {
+        @include grid-column(9);
     }
-    li.heading + li.subheading { padding-top: rem-calc(3) !important; }
-    li.active a {
-      background-color: $royal-purple !important;
-      color: #fff;
     }
-    li:hover a {
-      background-color: lighten($royal-purple, 10) !important;
-      color: #fff !important;
+    aside.fixed-sidebar + article {
+        @media #{$medium-up} {
+        @include grid-column($columns: 9, $offset:3);
     }
-    li.heading {
-      margin: rem-calc(30) 0 0 0;
-      padding: 0 rem-calc(4);
-      color: $small-font-color;
-      font-weight: bold;
-      text-transform: uppercase;
     }
-    & > li.heading:first-child {
-      margin-top: 0;
-    }
-  }
-  aside.sidebar + article {
-    @media #{$medium-up} {
-      @include grid-column(9);
-    }
-  }
-  aside.fixed-sidebar + article {
-    @media #{$medium-up} {
-      @include grid-column($columns: 9, $offset:3);
-    }
-  }
 
-  a { text-decoration: underline; }
-  a.button { text-decoration: none; }
+    a { text-decoration: underline; }
+    a.button { text-decoration: none; }
 }
 
 a i.fa:first-child {
-  padding-right: rem-calc(5);
+    padding-right: rem-calc(5);
 }
 
 .radios > span {
-  display: inline-block;
+    display: inline-block;
 }
 
 ul.dates {
-  margin-#{$default-float}: 0;
-  li {
-    list-style: none;
-    margin-bottom: rem-calc(12);
-  }
+    margin-#{$default-float}: 0;
+    li {
+        list-style: none;
+        margin-bottom: rem-calc(12);
+    }
 }
 
 h2 > ul.action-buttons {
-  margin-top: rem-calc(3);
+    margin-top: rem-calc(3);
 }
 
 ul.action-buttons {
-  @include button-group-container();
-  .button {
-    @include button($padding:false, $bg:$royal-purple);
-    &.alert     { @include button-style($bg:$alert-color); };
-    &.active    { @include button-style($bg:$royal-purple); };
-    margin: 0;
-    padding: rem-calc(3) rem-calc(10) rem-calc(4) rem-calc(10);
-    font-size: $button-font-sml;
-  }
-  & > li {
-    @include button-group-style(
-      $radius:$button-round
-    );
-  }
+    @include button-group-container();
+    .button {
+        @include button($padding:false, $bg:$royal-purple);
+        &.alert     { @include button-style($bg:$alert-color); };
+        &.active    { @include button-style($bg:$royal-purple); };
+        margin: 0;
+        padding: rem-calc(3) rem-calc(10) rem-calc(4) rem-calc(10);
+        font-size: $button-font-sml;
+    }
+    & > li {
+        @include button-group-style(
+            $radius:$button-round
+        );
+    }
 }
 
 article > h1 {
-  margin-bottom: rem-calc(30);
+    margin-bottom: rem-calc(30);
 }
 
 p.lead {
-  font-size: rem-calc(20);
+    font-size: rem-calc(20);
 }
 
 #map { height: 300px; }
 
 a.button.header-button {
-  margin-top: 20px;
+    margin-top: 20px;
 }
 
 .top-bar {
-  z-index: 1000;
-  li.name img {
-    height: 40px;
-    width: 40px;
-    padding: 0 3px 3px 0;
-    margin-right: 10px;
-  }
-
-  li .dropdown {
-    border: 1px solid $topbar-primary-color;
-  }
-
-  #language_menu { float: right; }
-
-  #user_menu  {
-    li .dropdown {
-      border-right: none;
-      left: auto;
-      right: 0;
+    z-index: 1000;
+    li.name img {
+        height: 40px;
+        width: 40px;
+        padding: 0 3px 3px 0;
+        margin-right: 10px;
     }
-  }
+
+    li .dropdown {
+        border: 1px solid $topbar-primary-color;
+    }
+
+    #language_menu { float: right; }
+
+    #user_menu  {
+        li .dropdown {
+            border-right: none;
+            left: auto;
+            right: 0;
+        }
+    }
 }
 
 [data-magellan-expedition] {
-  left: auto !important;
+    left: auto !important;
 }
 
 [data-magellan-destination] {
-  padding-top: rem-calc(30);
+    padding-top: rem-calc(30);
 }
 
 
 .timetable {
-  @include grid-row($behavior: collapse);
-  .day {
-    @media #{$medium-up} {
-      @include grid-column(3, $collapse:true);
-      padding: 0 rem-calc(5) 0 0;
-    }
-    h2 {
-      text-align: center;
-    }
-
-    .timeslots {
-      @media #{$medium-up} {
-        position: relative;
-      }
-      @media #{$small-only} {
-        height: auto !important;
-      }
-      .timeslot {
-        color: white;
-        margin-bottom: rem-calc(10);
-        @media #{$small-only} {
-          width: 100% !important;
-          height: auto !important;
-          position: static;
-        }
+    @include grid-row($behavior: collapse);
+    .day {
         @media #{$medium-up} {
-          position: absolute;
-          overflow: hidden;
-        }
-        padding: rem-calc(1) rem-calc(5);
-        margin: rem-calc(5);
-        box-sizing: border-box;
-        @include radius();
-      }
-      .workshop {
-          background-color: $royal-purple;
-          border: 2px solid $royal-purple;
-      }
-      .meal {
-          background-color: $yfu-ep;
-          border: 2px solid $yfu-ep;
-      }
-      .social, .tournament {
-          background-color: $yfu-ap;
-          border: 2px solid $yfu-ap;
-      }
-      .plenum {
-          background-color: $yfu-ap;
-          border: 2px solid $yfu-ap;
-      }
-      .other {
-          background-color: gray;
-          border: 2px solid gray;
-      }
-
-
+        @include grid-column(3, $collapse:true);
+        padding: 0 rem-calc(5) 0 0;
     }
-  }
+        h2 {
+            text-align: center;
+        }
+
+        .timeslots {
+            @media #{$medium-up} {
+            position: relative;
+        }
+            @media #{$small-only} {
+                height: auto !important;
+            }
+            .timeslot {
+                color: white;
+                margin-bottom: rem-calc(10);
+                @media #{$small-only} {
+                    width: 100% !important;
+                    height: auto !important;
+                    position: static;
+                }
+                @media #{$medium-up} {
+                    position: absolute;
+                    overflow: hidden;
+                }
+                padding: rem-calc(1) rem-calc(5);
+                margin: rem-calc(5);
+                box-sizing: border-box;
+                @include radius();
+            }
+            .workshop {
+                background-color: $royal-purple;
+                border: 2px solid $royal-purple;
+            }
+            .meal {
+                background-color: $yfu-ep;
+                border: 2px solid $yfu-ep;
+            }
+            .social, .tournament {
+                background-color: $yfu-ap;
+                border: 2px solid $yfu-ap;
+            }
+            .plenum {
+                background-color: $yfu-ap;
+                border: 2px solid $yfu-ap;
+            }
+            .other {
+                background-color: gray;
+                border: 2px solid gray;
+            }
+
+
+        }
+    }
 }
 
 hgroup.jumbo {
-  text-align: center;
-  margin-bottom: rem-calc(100);
-  .teaser {
-    font-family: $body-font-family;
-    font-size: rem-calc(32);
-    line-height: 150%;
-    text-align: left;
-    color: $yfu-text;
-    padding: 1em 0;
-  }
-  .inline-list {
-    display: inline-block;
-    padding: rem-calc(20) 0;
-    li > *  { box-sizing: content-box; }
-    .button { padding: 19px 30px 20px 30px; }
-
-    .border.button {
-      padding: 16px 30px 17px 30px;
-      background: #fff;
-      color: $royal-purple;
-      border: 3px solid $royal-purple;
-      box-shadow: none;
-      -moz-box-shadow: none;
-      transition: all 500ms ease-out;
-      &:hover {
-        color: $royal-purple;
-        border: 3px solid $royal-purple;
-      }
+    text-align: center;
+    margin-bottom: rem-calc(100);
+    .teaser {
+        font-family: $body-font-family;
+        font-size: rem-calc(32);
+        line-height: 150%;
+        text-align: left;
+        color: $yfu-text;
+        padding: 1em 0;
     }
-  }
+    .inline-list {
+        display: inline-block;
+        padding: rem-calc(20) 0;
+        li > *  { box-sizing: content-box; }
+        .button { padding: 19px 30px 20px 30px; }
+
+        .border.button {
+            padding: 16px 30px 17px 30px;
+            background: #fff;
+            color: $royal-purple;
+            border: 3px solid $royal-purple;
+            box-shadow: none;
+            -moz-box-shadow: none;
+            transition: all 500ms ease-out;
+            &:hover {
+                color: $royal-purple;
+                border: 3px solid $royal-purple;
+            }
+        }
+    }
 }
 
 .three-columns {
-  columns: 3;
-  -moz-columns: 3;
-  -webkit-columns: 3;
-  margin-bottom: rem-calc(60);
-  h2:first-child { margin-top: 0 }
+    columns: 3;
+    -moz-columns: 3;
+    -webkit-columns: 3;
+    margin-bottom: rem-calc(60);
+    h2:first-child { margin-top: 0 }
 }
 
 form .row .columns:first-child { padding-left: 0; }
 
 @media #{$small-only} {
-  form .row .columns { padding-left: 0; padding-right: 0; }
+    form .row .columns { padding-left: 0; padding-right: 0; }
 }
 
 .fa-check.done    { color: $royal-purple; }
@@ -350,39 +351,39 @@ a.clearing-close { text-decoration: none !important }
 dl.sub-nav dd a { text-decoration: none; }
 
 @media #{$small-up} {
-  h1 { font-size: $h1-font-size; }
-  h2 { font-size: $h2-font-size; }
-  h3 { font-size: $h3-font-size; }
-  h4 { font-size: $h4-font-size; }
-  h5 { font-size: $h5-font-size; }
-  h6 { font-size: $h6-font-size; } 
+    h1 { font-size: $h1-font-size; }
+    h2 { font-size: $h2-font-size; }
+    h3 { font-size: $h3-font-size; }
+    h4 { font-size: $h4-font-size; }
+    h5 { font-size: $h5-font-size; }
+    h6 { font-size: $h6-font-size; } 
 }
 
 .team-introduction {
-  h1 {
-    text-align: center;
-    font-size: rem-calc(35);
-  }
+    h1 {
+        text-align: center;
+        font-size: rem-calc(35);
+    }
 
-  ul {
-    @include block-grid(1);
-    @media #{$medium-up} {
-      @include block-grid(3);
+    ul {
+        @include block-grid(1);
+        @media #{$medium-up} {
+            @include block-grid(3);
+        }
+        .th {
+            max-width: 200px;
+        }
     }
-    .th {
-        max-width: 200px;
+    blockquote {
+        font-style: italic;
     }
-  }
-  blockquote {
-    font-style: italic;
-  }
 }
 
 .logo-like {
-  text-align: center;
-  color: $royal-purple;
-  font-size: rem-calc(60);
-  font-style: italic;
-  font-weight: normal;
-  line-height: 100%;
+    text-align: center;
+    color: $royal-purple;
+    font-size: rem-calc(60);
+    font-style: italic;
+    font-weight: normal;
+    line-height: 100%;
 }
