--- a/app/views/pages/index.haml
+++ b/app/views/pages/index.haml
@@ -1,28 +1,58 @@
+
+%section
+  .rounded-image(style="position:relative")
+    %svg(style="position:absolute; left: 0; bottom: 0" width="100%" height="40%" preserveAspectRatio="none" viewBox="0 0 10 4" xmlns="http://www.w3.org/2000/svg")
+      %path(d="M 0 10 L 0 0 Q 5 5, 10 0 L 10 10 Z" fill="white")
+    = image_tag 'team/team.jpeg'
+
 %section.content
   %article
-    %hgroup.jumbo
-      = image_tag 'jubi-logo.png'
-      .teaser
-        = t('index.teaser_html')
-      = image_tag 'yfu-logo-transparent.png'
+    %h1.logo-like
+      %strong Das Jubiläum
+    .one-third
+      %h2 Wann?
+      Text
+    .one-third
+      %h2 Wo?
+      Text
+    .one-third
+      %h2 Was?
+      Text
+
+%hr
 
 %section.content
-  %article.half
-    %h2= t('index.exchange stories make an impact.title')
-    = markdown t('index.exchange stories make an impact.text')
+  %article
+    %h1.logo-like
+      %strong Teaser
+    Teaser-Text
+    .flex-video
+      %iframe(src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F60JahreYFU%2Fvideos%2Fvb.536752813165935%2F569131216594761%2F%3Ftype%3D3&show_text=0&width=560" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true")
 
-    %h2= t('index.exchange stories.title')
-    = markdown t('index.exchange stories.text')
+%hr
 
-  %article.half
-    %h2= t('index.make an impact.title')
-    = markdown t('index.make an impact.text')
+%section.content
+  %article
+    %h1.logo-like
+      %strong Das Motto
+    %h1.logo-like
+      <b>exchange</b> stories<br>
+      make an <b>impact</b>
+    .one-third
+      %h2 <b>exchange</b> stories
+      = markdown t('index.exchange stories.text')
+    .one-third
+      %h2 <b>exchange impact</b>
+      = markdown t('index.exchange stories make an impact.text')
+    .one-third
+      %h2 make an <b>impact</b>
+      = markdown t('index.make an impact.text')
+
+%hr
 
 %section.content
   %article
     %h2.logo-like= t('index.we want you_html')
-
-%section.content
   %article.half
     %h2= t('index.program.title')
     = markdown t('index.program.text')
