--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -75,5 +75,6 @@
         %h2 Vereinsregister
         %p
           Amtsgericht Hamburg, Registernummer VR&nbsp;6999
+        %h2= link_to t('attributions'), page_path('attributions')
 
   = yield(:page_js)
