--- a/app/views/pages/index.haml
+++ b/app/views/pages/index.haml
@@ -1,9 +1,10 @@
 
 %section
   .rounded-image(style="position:relative")
-    %svg(style="position:absolute; left: 0; bottom: 0" width="100%" height="40%" preserveAspectRatio="none" viewBox="0 0 10 4" xmlns="http://www.w3.org/2000/svg")
+    %svg(style="position:absolute; left: 0; bottom: 0" width="100%" height="34%" preserveAspectRatio="none" viewBox="0 0 10 4" xmlns="http://www.w3.org/2000/svg")
       %path(d="M 0 10 L 0 0 Q 5 5, 10 0 L 10 10 Z" fill="white")
-    = image_tag 'team/team.jpeg'
+    = image_tag 'logo.png', width: '25%', style: 'position:absolute; left: 15%; bottom: 10%'
+    = image_tag 'header.jpg'
 
 %section.content
   %article
@@ -11,12 +12,15 @@
       %strong Das Jubiläum
     .one-third
       %h2 Wann?
+      = image_tag 'otto-braun-saal.jpg'
       Text
     .one-third
       %h2 Wo?
+      = image_tag 'juhe.jpg'
       Text
     .one-third
       %h2 Was?
+      = image_tag 'staatsbibliothek.jpg'
       Text
 
 %hr
@@ -25,9 +29,9 @@
   %article
     %h1.logo-like
       %strong Teaser
-    Teaser-Text
-    .flex-video
-      %iframe(src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F60JahreYFU%2Fvideos%2Fvb.536752813165935%2F569131216594761%2F%3Ftype%3D3&show_text=0&width=560" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true")
+    .row
+      .flex-video
+        %iframe(src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F60JahreYFU%2Fvideos%2Fvb.536752813165935%2F569131216594761%2F%3Ftype%3D3&show_text=0&width=560" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true")
 
 %hr
 
