--- a/app/views/pages/index.haml
+++ b/app/views/pages/index.haml
@@ -1,10 +1,6 @@
 
 %section.header
-  .rounded-image(style="position:relative")
-    %svg(style="position:absolute; left: 0; bottom: 0" width="100%" height="34%" preserveAspectRatio="none" viewBox="0 0 10 4" xmlns="http://www.w3.org/2000/svg")
-      %path(d="M 0 10 L 0 0 Q 5 5, 10 0 L 10 10 Z" fill="white")
-    = image_tag 'logo.png', width: '25%', style: 'position:absolute; left: 15%; bottom: 10%'
-    = image_tag 'header.jpg'
+  = header_image 'header.jpg'
 
 %section.content
   %h1.logo-like
