Fix small layout regression

--- a/app/views/pages/team.haml
+++ b/app/views/pages/team.haml
@@ -7,7 +7,7 @@
 %section.content
   %h1.logo-like
     %strong= t('team.meet the team')
-
+  %article
     .team-introduction
       %ul
         = render partial: 'team_introduction', locals: {name: 'Alex Senger'}
