Remove padding from video on small screen

--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -66,6 +66,13 @@ section.content, section.flash {
         @include grid-column(12);
     }
 
+    .video-column {
+        @include grid-column(12);
+        @media #{$small-only} {
+            padding: 0;
+        }
+    }
+
     .two-thirds {
         @media #{$medium-up} {
         @include grid-column(8);
