--- a/app/views/pages/index.haml
+++ b/app/views/pages/index.haml
@@ -23,10 +23,9 @@
 %section.content
   %h1.logo-like
     %strong Teaser
-  %article
-    .row
-      .flex-video
-        %iframe(src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F60JahreYFU%2Fvideos%2Fvb.536752813165935%2F569131216594761%2F%3Ftype%3D3&show_text=0&width=560" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true")
+  .video-column
+    .flex-video
+      %iframe(src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F60JahreYFU%2Fvideos%2Fvb.536752813165935%2F569131216594761%2F%3Ftype%3D3&show_text=0&width=560" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true")
 
 %hr
 
